--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,8 +25,8 @@ en:
     about:
       title: "About K-Sato"
       paragraph1: " People often find me outgoing, upbeat, selfmotivated and silly. I grew up in a very small and peaceful town in Japan and moved to a huge city for college."
-      paragraph2: " In college, I majored in political economy and mainly spent my time there studying International political economy and Public economics. I also started coding when I was a senior and have been studying programming since then."
-      paragraph3: " Though what I learnt in college was academically very interesting, I didn't necessarily think I am suitable for a politician or economist. I also was not interested in sales or marketing which a lot of my peers from college in the same department are doing. So I ended up getting a job as a webdeveloper since I really liked coding and I was really fascinated with the idea of createing something unique and original that didn't exist before."
+      paragraph2: " In college, I majored in political economy and mainly spent my time there studying international political economy and public economics. I also started coding when I was a senior and have been studying programming since then."
+      paragraph3: " Though what I learnt in college was academically very interesting, I didn't necessarily consider myself suitable for a politician or economist. I also was not interested in sales or marketing which a lot of my friends in the same department ended up doing after college. So I ended up getting a job as a webdeveloper since I really liked coding and I was really fascinated with the idea of createing something unique and original that didn't exist before."
     mobile_nav:
       category: "Category"
       recent_posts: "Recent Posts"
