Add total page views to each post

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,7 @@ en:
     show:
       posted_on: "Posted on"
       related_posts: "Related Posts"
+      page_views: "Total Page Views:"
     archive:
       title: "K-Sato's Blog Archive"
     about:
